--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,138 +1,136 @@
-
-
-
 <!-- Footer -->
 <footer
-class="text-center text-lg-start text-white"  style="background-color: #929fba"         
+  class="text-center text-lg-start text-white"
+  style="background-color: #929fba"
 >
-<!-- Grid container -->
-<div class="container p-4 pb-0">
-<!-- Section: Links -->
-<section class="">
-<!--Grid row-->
-<div class="row">
-<!-- Grid column -->
-<div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-  <h6 class="text-uppercase mb-4 font-weight-bold">
-    <img src="/images/Coding_Ninjas_logo.jpeg" alt="cnLogo" width="35px">
-    Coding Ninjas
-  </h6>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. In nobis assumenda quos, et reiciendis at quod eum laborum dolorum explicabo!
-  </p>
-</div>
-<!-- Grid column -->
+  <!-- Grid containerhhhh  -->
+  <div class="container p-4 pb-0">
+    <!-- Section: Links -->
+    <section class="">
+      <!--Grid row-->
+      <div class="row">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">
+            <img
+              src="/images/Coding_Ninjas_logo.jpeg"
+              alt="cnLogo"
+              width="35px"
+            />
+            Coding Ninjas
+          </h6>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. In nobis
+            assumenda quos, et reiciendis at quod eum laborum dolorum explicabo!
+          </p>
+        </div>
+        <!-- Grid column -->
 
-<hr class="w-100 clearfix d-md-none" />
+        <hr class="w-100 clearfix d-md-none" />
 
-<!-- Grid column -->
-<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-  <h6 class="text-uppercase mb-4 font-weight-bold">About</h6>
-  
-  <p>
-    <a class="text-white">Our Vision</a>
-  </p>
-  <p>
-    <a class="text-white">Our Partners</a>
-  </p>  
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">About</h6>
 
-  <p>
-    <a class="text-white">Training Programs</a>
-  </p>
-  <p>
-    <a class="text-white">Survey Reports</a>
-  </p>
-</div>
-<!-- Grid column -->
+          <p>
+            <a class="text-white">Our Vision</a>
+          </p>
+          <p>
+            <a class="text-white">Our Partners</a>
+          </p>
 
-<hr class="w-100 clearfix d-md-none" />
+          <p>
+            <a class="text-white">Training Programs</a>
+          </p>
+          <p>
+            <a class="text-white">Survey Reports</a>
+          </p>
+        </div>
+        <!-- Grid column -->
 
-<!-- Grid column -->
-<hr class="w-100 clearfix d-md-none" />
+        <hr class="w-100 clearfix d-md-none" />
 
-<!-- Grid column -->
-<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-  <h6 class="text-uppercase mb-4 font-weight-bold">Contact Us</h6>
-  <p><i class="bi bi-house-door mr-3"></i>Saharanpur,UP</p>
-  <p><i class="bi bi-envelope-at mr-3"></i> pradumbd@gmail.com</p>
-  <p><i class="bi bi-phone mr-3"></i> + 01 234 567 88</p>
-  <p><i class="bi bi-printer mr-3"></i> + 01 234 567 89</p>
-</div>
-<!-- Grid column -->
+        <!-- Grid column -->
+        <hr class="w-100 clearfix d-md-none" />
 
-<!-- Grid column -->
-<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-  <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Contact Us</h6>
+          <p><i class="bi bi-house-door mr-3"></i>Saharanpur,UP</p>
+          <p><i class="bi bi-envelope-at mr-3"></i> pradumbd@gmail.com</p>
+          <p><i class="bi bi-phone mr-3"></i> + 01 234 567 88</p>
+          <p><i class="bi bi-printer mr-3"></i> + 01 234 567 89</p>
+        </div>
+        <!-- Grid column -->
 
-  <!-- Facebook -->
-  <a
-     class="btn btn-primary btn-floating m-1"
-     style="background-color: #3b5998;border-radius: 50%;"
-     href="#!"
-     role="button"
-     ><i class="bi bi-facebook"></i
-    ></a>
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
 
-  <!-- Twitter -->
-  <a
-     class="btn btn-primary btn-floating m-1"
-     style="background-color: #55acee; border-radius: 50%;"
-     href="#!"
-     role="button"
-     ><i class="bi bi-twitter"></i
-    ></a>
+          <!-- Facebook -->
+          <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #3b5998; border-radius: 50%"
+            href="#!"
+            role="button"
+            ><i class="bi bi-facebook"></i
+          ></a>
 
-  <!-- Google -->
-  <a
-     class="btn btn-primary btn-floating m-1"
-     style="background-color: #dd4b39; border-radius: 50%;"
-     href="#!"
-     role="button"
-     ><i class="bi bi-google"></i
-    ></a>
+          <!-- Twitter -->
+          <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #55acee; border-radius: 50%"
+            href="#!"
+            role="button"
+            ><i class="bi bi-twitter"></i
+          ></a>
 
-  <!-- Instagram -->
-  <a
-     class="btn btn-primary btn-floating m-1"
-     style="background-color: #ac2bac; border-radius: 50%;"
-     href="#!"
-     role="button"
-     ><i class="bi bi-instagram"></i
-    ></a>
+          <!-- Google -->
+          <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #dd4b39; border-radius: 50%"
+            href="#!"
+            role="button"
+            ><i class="bi bi-google"></i
+          ></a>
 
-  <!-- Linkedin -->
-  <a
-     class="btn btn-primary btn-floating m-1"
-     style="background-color: #0082ca; border-radius: 50%;"
-     href="#!"
-     role="button"
-     ><i class="bi bi-linkedin"></i
-    ></a>
-  <!-- Github -->
-  <a
-     class="btn btn-primary btn-floating m-1"
-     style="background-color: #333333; border-radius: 50%;"
-     href="#!"
-     role="button"
-     ><i class="bi bi-github"></i
-    ></a>
-</div>
+          <!-- Instagram -->
+          <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #ac2bac; border-radius: 50%"
+            href="#!"
+            role="button"
+            ><i class="bi bi-instagram"></i
+          ></a>
 
-</div>
-<!--Grid row-->
-</section>
-<!-- Section: Links -->
-</div>
-<!-- Grid container -->
+          <!-- Linkedin -->
+          <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #0082ca; border-radius: 50%"
+            href="#!"
+            role="button"
+            ><i class="bi bi-linkedin"></i
+          ></a>
+          <!-- Github -->
+          <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #333333; border-radius: 50%"
+            href="#!"
+            role="button"
+            ><i class="bi bi-github"></i
+          ></a>
+        </div>
+      </div>
+      <!--Grid row-->
+    </section>
+    <!-- Section: Links -->
+  </div>
+  <!-- Grid container -->
 
-<!-- Copyright -->
-<div
-class="text-center p-3"
-style="background-color: rgba(0, 0, 0, 0.2)"
->
-<%- include('_developerInfo'); %>
-</div>
-<!-- Copyright -->
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    <%- include('_developerInfo'); %>
+  </div>
+  <!-- Copyright -->
 </footer>
 <!-- Footer -->
-
